examples/invalid/unknown_symbol.mini
# Ошибка: недопустимый символ &
2 & 3
